# faf-wasm-sdk

./: .faf-dna  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO-CLI-INTEGRATION.md  project.faf  wrangler.toml
examples/: benchmark.html  browser.html  edge-worker.js
js/: index.d.ts  index.js  package.json
npm-package/: LICENSE  README.md  faf_wasm_sdk.d.ts  faf_wasm_sdk.js  faf_wasm_sdk_bg.wasm.d.ts  package.json  project.faf  project.faf.backup-1764220728780
src/: error.rs  fafb.rs  generator.rs  lib.rs  mk4.rs  parser.rs  scorer.rs  types.rs
tests/: stress.rs  wasm.rs
wjttc/: TESTING-STRATEGY.md  WJTTC-REPORT-2026-03-14.md  WJTTC-STANDARD.md  proof-by-exhaustion.js  run-all.sh  stress-test.sh
