[package]
name = "faf-wasm-sdk"
version = "2.0.0"
edition = "2021"
authors = ["wolfejam <wolfejam@faf.one>"]
description = "FAF WASM SDK v2 - Mk4 scoring + FAFb binary for browsers and edge compute"
license = "MIT"
repository = "https://github.com/Wolfe-Jam/faf-wasm-sdk"
homepage = "https://faf.one"
documentation = "https://docs.rs/faf-wasm-sdk"
readme = "README.md"
keywords = ["faf", "wasm", "ai-context", "scoring", "fafb"]
categories = ["wasm", "parsing"]
exclude = ["target/", ".git/", "*.lock", "pkg/", "pkg-bundler/", "pkg-node/", "npm-package/"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
faf-rust-sdk = "2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]     # Optimize WASM binary size
